--- a/src/components/WindowTable/window-table.component.mdx
+++ b/src/components/WindowTable/window-table.component.mdx
@@ -4,7 +4,7 @@ name: WindowTable
 
 import { Playground } from 'docz';
 import WindowTable from '../WindowTable';
-import { columns, data } from './data';
+import { columns, data } from '../../example';
 
 # WindowTable
 
