--- a/src/components/TmpTable/window-table.component.mdx
+++ b/src/components/TmpTable/window-table.component.mdx
@@ -1,15 +1,22 @@
 ---
-name: WindowTable
+name: TmpTable
 ---
 
 import { Playground } from 'docz';
-import WindowTable from '../WindowTable';
-import { columns, data } from '../../example';
+import WindowTable from '../TmpTable';
+import { columns, rows } from '../../examples/data/pokedex';
 
 # WindowTable
 
 ## Properties
 
 <Playground>
-  <WindowTable columns={columns} data={data} width={600} />
+    <WindowTable columns={columns} rows={rows} width={600}
+                  rowHeight={50}
+                  columnWidth={200}
+                  fixedLeftCount={1} 
+                  fixedRightCount={0} 
+                  fixedTopCount={1} 
+                  fixedBottomCount={0} 
+  />
 </Playground>
