--- a/src/components/WindowTable/window-table.component.mdx
+++ b/src/components/WindowTable/window-table.component.mdx
@@ -4,12 +4,19 @@ name: WindowTable
 
 import { Playground } from 'docz';
 import WindowTable from '../WindowTable';
-import { columns, data } from '../../example';
+import { columns, rows } from '../../examples/data/pokedex';
 
 # WindowTable
 
 ## Properties
 
 <Playground>
-  <WindowTable columns={columns} data={data} width={600} />
+  <WindowTable columns={columns} rows={rows} width={600}
+                  rowHeight={50}
+                  columnWidth={200}
+                  fixedLeftCount={1} 
+                  fixedRightCount={1} 
+                  fixedTopCount={1} 
+                  fixedBottomCount={1} 
+  />
 </Playground>
