--- a/src/components/HungryJacks/window-table.component.mdx
+++ b/src/components/HungryJacks/window-table.component.mdx
@@ -16,14 +16,14 @@ import { columns, rows } from '../../examples/data/pokedex';
           height={400}
           columnCount={50}
           rowCount={100}
-          rowHeight={40}
+          rowHeight={50}
           columnWidth={100}
           fixedLeftCount={1}
           fixedRightCount={1}
           fixedTopCount={1}
           fixedBottomCount={1} >
           {({ columnIndex, rowIndex, style }) => (
-                    <div style={style}>
+                    <div className="cell" style={style}>
                       {rowIndex} , {columnIndex}
                     </div>
                   )}
