--- a/src/components/HungryJacks/window-table.component.mdx
+++ b/src/components/HungryJacks/window-table.component.mdx
@@ -9,6 +9,14 @@ import { columns, rows } from '../../examples/data/pokedex';
 
 # WindowTable
 
+React components for efficiently rendering large lists and tabular data React components for efficiently rendering large lists and tabular data React components for efficiently rendering large lists and tabular data
+
+React components for efficiently rendering large lists and tabular data
+
+
+## Getting Started
+
+
 ## Properties
 
 <PropsTable of={WindowTable} />
