add hoc examples

--- a/src/components/WindowTable/window-table.component.mdx
+++ b/src/components/WindowTable/window-table.component.mdx
@@ -2,9 +2,8 @@
 name: WindowTable
 ---
 
-
 import { PropsTable, Playground } from 'docz';
-import WindowTable from './window-table.component.jsx';
+import WindowTable from './index';
 import { columns, rows } from '../../examples/data/pokedex';
 
 # WindowTable
