add fake user data example

--- a/src/enhancers/with-columns.enhancer.mdx
+++ b/src/enhancers/with-columns.enhancer.mdx
@@ -4,5 +4,10 @@ name: WithColumns
 
 import { PropsTable, Playground } from 'docz';
 import WindowTable from '../components/WindowTable';
+import { columns, rows } from '../examples/data/fake-users.js';
 
 # WithColumns (HOC)
+
+<div>
+  {JSON.stringify(columns)}
+</div>
