--- a/src/components/WindowTable/window-table.component.mdx
+++ b/src/components/WindowTable/window-table.component.mdx
@@ -57,3 +57,5 @@ React table component that supports fixed columns inspired by [react-window](htt
     )}
   </WindowTable>
 </Playground>
+
+## Variable Size
