--- a/src/enhancers/with-columns.enhancer.mdx
+++ b/src/enhancers/with-columns.enhancer.mdx
@@ -23,3 +23,25 @@ import withColumns from './with-columns.enhancer';
   >
   </WindowTable>
 </Playground>
+
+
+## columns
+
+```
+['avatar', 'firstName', 'lastName']
+
+[
+  {
+    name: 'avatar',
+    width: 100,
+    getValue: function () { ... },
+    render: function () { ... },
+  }
+]
+
+{
+  avatar: { ... },
+  firstName: { ... },
+  lastName: { ... },
+}
+```
