--- a/src/enhancers/withColumns/with-columns.enhancer.mdx
+++ b/src/enhancers/withColumns/with-columns.enhancer.mdx
@@ -1,13 +1,13 @@
 ---
-name: withColumnsAndRows (HOC)
+name: withColumns (HOC)
 ---
 
 import { PropsTable, Playground } from 'docz';
-import WindowTable from '../components/WindowTable';
-import { columns, rows } from '../examples/data/fake-users';
+import WindowTable from '../../components/WindowTable';
+import { columns, rows } from '../../examples/data/fake-users';
 import withColumns from './with-columns.enhancer';
 
-# withColumnsAndRows (HOC)
+# withColumns (HOC)
 
 <Playground>
   <WindowTable
