--- a/src/enhancers/withClassNames/with-class-names.enhancer.mdx
+++ b/src/enhancers/withClassNames/with-class-names.enhancer.mdx
@@ -14,8 +14,8 @@ import withColumns from '../withColumns';
   <WindowTable
     enhancer={withClassNames}
     cellClassNames={{
-      oddRow: 'row-odd',    // background: yellow;
-      evenRow: 'row-even',  // background: yellow;
+      rowOdd: 'row-odd',    // background: yellow;
+      rowEven: 'row-even',  // background: yellow;
     }}
     width={497}
     height={297}
